--- a/countdown/simplyCountdown.theme.default.css
+++ b/countdown/simplyCountdown.theme.default.css
@@ -1,29 +1,30 @@
-.simply-countdown {
-  overflow: hidden;
-  display: table;
-  margin: auto;
-  font-family: "Arial", sans-serif;
-}
-.simply-countdown > .simply-section {
-  width: 50px;
-  height: 50px;
-  padding: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  float: left;
-  margin: 10px;
-  background: var(--pink);
-  box-shadow: 0 2px 2px rgb(0 0 0/0.5);
-  border-radius: 50%;
+  .simply-countdown {
+    overflow: hidden;
+    display: block;
+    margin: auto;
+    font-family: "Arial", sans-serif;
+  }
 
-}
-.simply-countdown > .simply-section .simply-amount,
-.simply-countdown > .simply-section .simply-word {
-  display: block;
-  text-align: center;
-}
+  .simply-countdown .simply-section {
+    width: 50px;
+    height: 50px;
+    padding: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    margin: 10px;
+    background: var(--pink);
+    box-shadow: 0 2px 2px rgb(0 0 0/0.5);
+    border-radius: 50%;
+  }
 
-.simply-countdown > .simply-section .simply-amount{
+  .simply-countdown .simply-section .simply-amount,
+  .simply-countdown .simply-section .simply-word {
+    display: block;
+    text-align: center;
+  }
+
+  .simply-countdown .simply-section .simply-amount {
     font-size: 1.3rem;
-}
+  }
