--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
 body {
   font-size: 1.2rem;
   font-family: "Work Sans", sans-serif;
-  min-height: 4000px;
+  min-height: 6000px;
   /* Agar bisa discroll */
 }
 
 .hero::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -61,23 +61,23 @@ body {
 }
 
 .mynavbar {
-  background-color: rgba(255, 255, 255, 0.3) !important;
+  background-color: rgba(255, 255, 255, 0.8) !important;
   backdrop-filter: blur(4px);
 }
 
 .mynavbar .offcanvas {
-  height: 50vh;
-  background-color: rgba(255, 255, 255, 0.8);
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.8) !important;
 }
 
 .mynavbar .navbar-brand {
-  font-family: 'Sacramento', cursive;
+  font-family: "Sacramento", cursive;
   font-size: 3.2rem;
   font-weight: bold;
 }
 
 .mynavbar .offcanvas-title {
-  font-family: 'Sacramento', cursive;
+  font-family: "Sacramento", cursive;
   font-size: 2.8rem;
   font-weight: bold;
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
@@ -98,12 +98,14 @@ body {
   background-size: cover;
   min-height: 100vh;
   margin-top: -6rem;
-  padding-top: 15rem;
+  padding-top: 8rem;
   padding-bottom: 5rem;
-
 }
 
-.home h2 {
+.home h2,
+.info h2,
+.story h2,
+.gallery h2 {
   color: var(--pink);
   font-family: "Sacramento", cursive;
   font-size: 5rem;
@@ -113,7 +115,6 @@ body {
 .home h3 {
   color: #444;
   font-size: 1.5 rem;
-
 }
 
 .home p {
@@ -135,7 +136,6 @@ body {
   width: 100%;
 }
 
-
 .home .heart {
   width: 50px;
   height: 50px;
@@ -152,21 +152,13 @@ body {
 .home .heart i {
   margin: auto;
   color: var(--pink);
-
 }
 
 .info {
   background-color: var(--bg);
   color: white;
-  padding-top: 5rem;
+  padding-top: 8rem;
   padding-bottom: 7rem;
-}
-
-.info h2 {
-  color: var(--pink);
-  font-family: 'Sacramento';
-  font-size: 5rem;
-  font-weight: bold;
 }
 
 .info .alamat {
@@ -200,6 +192,131 @@ body {
   font-weight: 300;
 }
 
+.story,
+.gallery {
+  padding-top: 10rem;
+  padding-bottom: 8rem;
+}
+
+.story span,
+.gallery span {
+  text-transform: uppercase;
+  color: #666;
+  font-size: 0.9rem;
+  letter-spacing: 1px;
+  display: block;
+  /* Agar font berubah */
+  margin-bottom: 1rem;
+}
+
+.story p,
+.gallery p {
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.timeline {
+  list-style: none;
+  padding: 1.4rem 0;
+  margin-top: 1rem;
+  position: relative;
+}
+
+.timeline::before {
+  content: '';
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  width: 1px;
+  background-color: #ccc;
+  left: 50%;
+}
+
+.timeline li {
+  margin-bottom: 1.5rem;
+  position: relative;
+}
+
+.timeline li::before,
+.timeline li::after {
+  content: '';
+  display: table;
+}
+
+.timeline li::after {
+  clear: both;
+}
+
+.timeline li .timeline-image {
+  width: 160px;
+  height: 160px;
+  background-color: #ccc;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.timeline li .timeline-panel {
+  width: 40%;
+  float: left;
+  border: 1px solid #ccc;
+  padding: 2rem;
+  position: relative;
+  border-radius: 8px;
+  background-color: #fff;
+}
+
+.timeline li .timeline-panel::before {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  border-top: 15px solid transparent;
+  border-left: 15px solid #ccc;
+  border-right: 0 solid #ccc;
+  border-bottom: 15px solid transparent;
+  top: 80px;
+  right: -15px;
+}
+
+.timeline li .timeline-panel::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  border-top: 14px solid transparent;
+  border-left: 14px solid #fff;
+  border-right: 0PX solid #fff;
+  border-bottom: 14px solid transparent;
+  top: 81px;
+  right: -13px;
+}
+
+.timeline li.timeline-inverted .timeline-panel {
+  float: right;
+}
+
+.timeline li.timeline-inverted .timeline-panel::before {
+  border-left-width: 0;
+  border-right-width: 15px;
+  left: -15px;
+  right: auto;
+}
+
+.timeline li.timeline-inverted .timeline-panel::after {
+  border-left-width: 0;
+  border-right-width: 14px;
+  left: -13px;
+  right: auto;
+}
+
+.gallery {
+  background-color: #f5f5f5;
+}
+
+
 
 /* Media query */
 /* Extra Large */
@@ -207,22 +324,53 @@ body {
   .home .heart {
     transform: translateX(-50%) translateY(45px);
   }
-
 }
 
 /* Laptop */
+/* Setengah lebih sedikit */
 @media (max-width: 992px) {
   html {
     font-size: 75%;
   }
 
-  .simply-countdown>.simply-section {
+  .simply-countdown .simply-section {
     padding: 70px;
   }
 
   .home .heart {
     display: none;
   }
+
+  .timeline::before {
+    left: 60px;
+  }
+
+  .timeline li .timeline-image {
+    left: 15px;
+    margin-left: 45px;
+    top: 16px;
+  }
+
+  .timeline li .timeline-panel {
+    width: calc(100% - 200px);
+    float: right;
+  }
+
+  .timeline li .timeline-panel::before {
+    border-left-width: 0;
+    border-right-width: 15px;
+    left: -15px;
+    right: auto;
+  }
+
+  .timeline li .timeline-panel::after {
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -13px;
+    right: auto;
+  }
+
+
 
 }
 
@@ -232,7 +380,7 @@ body {
     font-size: 65%;
   }
 
-  .simply-countdown>.simply-section {
+  .simply-countdown .simply-section {
     padding: 45px;
     margin: 5px;
     margin-bottom: 15px;
@@ -243,28 +391,74 @@ body {
     text-align: center;
   }
 
+  .timeline li .timeline-image {
+    width: 140px;
+    height: 140px;
+  }
 
   .sticky-top {
     overflow: hidden;
   }
+
+  .timeline li .timeline-panel::before {
+    border-left-width: 0;
+    border-right-width: 15px;
+    left: -15px;
+    right: auto;
+    top: 31px;
+  }
+
+  .timeline li .timeline-panel::after {
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -13px;
+    right: auto;
+    top: 32px;
+  }
+
 
 }
 
 /* Phone Mobile */
 @media (max-width: 576px) {
   html {
-    font-size: 60%;
+    font-size: 60% !important;
   }
 
-  .simply-countdown>.simply-section {
-    padding: 30px;
-    margin: 3px;
-    margin-bottom: 15px;
+  .simply-countdown .simply-section {
+    padding: 35px !important;
+    margin-bottom: 15px !important;
+    margin: 0 5px !important;
+    margin-bottom: 10px !important;
   }
+
+
 
   .mynavbar .nav-link {
-    font-size: 1, 7rem;
-    text-align: center;
+    font-size: 1.7rem !important;
+    text-align: center !important;
+  }
 
+  .timeline li .timeline-image {
+    width: 80px;
+    height: 80px;
+  }
+
+  .timeline li .timeline-panel {
+    width: 60%;
+    transform: translateX(-20px);
+  }
+
+  .timeline li .timeline-panel::before {
+    top: 30px;
+  }
+
+  .timeline li .timeline-panel::before {
+    top: 31px;
+
+  }
+
+  .sticky-top {
+    overflow: hidden;
   }
 }
