--- a/countdown/simplyCountdown.theme.default.css
+++ b/countdown/simplyCountdown.theme.default.css
@@ -1,7 +1,7 @@
   .simply-countdown {
     overflow: hidden;
     display: block;
-    margin: auto;
+    margin: 10px 100px;
     font-family: "Arial", sans-serif;
   }
 
