--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --pink: #f14e95;
+  --pink: #ff0080;
   --bg: #0a0a0a;
   --shadow: 0 2px 2px rgb(0 0 0/0.5);
 }
@@ -7,7 +7,6 @@
 body {
   font-size: 1.2rem;
   font-family: "Work Sans", sans-serif;
-  min-height: 6000px;
   /* Agar bisa discroll */
 }
 
@@ -18,7 +17,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(img/bg.jpg);
+  background-image: url(img/bg-hero.jpg);
   background-size: 100%;
   background-position: center;
   z-index: -1;
@@ -60,6 +59,58 @@ body {
   background-color: var(--pink);
 }
 
+.lihatUndangan {
+  margin-top: 0px !important;
+  /* border-radius: 60px !important;
+  border: none !important;*/
+  color: #eeeeee !important;
+  cursor: pointer !important;
+  display: inline-block !important;
+  -webkit-animation: glowing 1300ms infinite;
+  -moz-animation: glowing 1300ms infinite;
+  -o-animation: glowing 1300ms infinite;
+  animation: glowing 1300ms infinite
+}
+
+@-webkit-keyframes glowing {
+  0% {
+    background-color: var(--pink);
+    -webkit-box-shadow: 0 0 var(--pink);
+  }
+
+  50% {
+    background-color: #ff0fbb;
+    /* Ubah ini jika Anda ingin warna yang berbeda di tengah-tengah animasi */
+    -webkit-box-shadow: 0 0 15px #ff7ed2;
+    /* Ubah ini jika Anda ingin bayangan yang berbeda di tengah-tengah animasi */
+  }
+
+  100% {
+    background-color: var(--pink);
+    -webkit-box-shadow: 0 0 3px var(--pink);
+  }
+}
+
+@keyframes glowing {
+  0% {
+    background-color: var(--pink);
+    box-shadow: 0 0 3px var(--pink);
+  }
+
+  50% {
+    background-color: #ff0080;
+    /* Ubah ini jika Anda ingin warna yang berbeda di tengah-tengah animasi */
+    box-shadow: 0 0 15px #ff3098;
+    /* Ubah ini jika Anda ingin bayangan yang berbeda di tengah-tengah animasi */
+  }
+
+  100% {
+    background-color: var(--pink);
+    box-shadow: 0 0 3px var(--pink);
+  }
+}
+
+
 .mynavbar {
   background-color: rgba(255, 255, 255, 0.8) !important;
   backdrop-filter: blur(4px);
@@ -94,18 +145,31 @@ body {
 }
 
 .home {
-  background-image: url(img/bg_home.png);
+  background-image: url(img/bg-home.png);
   background-size: cover;
-  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-position: center;
   margin-top: -6rem;
   padding-top: 8rem;
-  padding-bottom: 5rem;
+  padding-bottom: 4rem;
+}
+
+.info {
+  background-image: url(img/bg-home.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding-top: 10rem;
+  padding-bottom: 8rem;
+
 }
 
 .home h2,
 .info h2,
 .story h2,
-.gallery h2 {
+.gallery h2,
+.rsvp h2,
+.gifts h2 {
   color: var(--pink);
   font-family: "Sacramento", cursive;
   font-size: 5rem;
@@ -123,7 +187,7 @@ body {
 }
 
 .home .couple {
-  margin-top: 100px;
+  margin-top: 25px;
 }
 
 .home .couple h3 {
@@ -154,11 +218,11 @@ body {
   color: var(--pink);
 }
 
-.info {
-  background-color: var(--bg);
-  color: white;
+.story {
+  background-image: url(img/bg-story.jpg);
+  background-size: cover;
   padding-top: 8rem;
-  padding-bottom: 7rem;
+  padding-bottom: 4rem;
 }
 
 .info .alamat {
@@ -172,7 +236,7 @@ body {
 
 .info .card {
   background-color: rgba(255, 255, 255, 0.2) !important;
-  color: white !important;
+  color: black !important;
   border: 1px solid #999;
 }
 
@@ -192,14 +256,16 @@ body {
   font-weight: 300;
 }
 
-.story,
-.gallery {
+.gallery,
+.rsvp,
+.gifts {
   padding-top: 10rem;
   padding-bottom: 8rem;
 }
 
 .story span,
-.gallery span {
+.gallery span,
+.gifts span {
   text-transform: uppercase;
   color: #666;
   font-size: 0.9rem;
@@ -210,7 +276,9 @@ body {
 }
 
 .story p,
-.gallery p {
+.gallery p,
+.rsvp p,
+.gifts p {
   font-size: 1rem;
   font-weight: 300;
 }
@@ -316,6 +384,103 @@ body {
   background-color: #f5f5f5;
 }
 
+.gallery a {
+  width: 400px;
+  height: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+  border: 1px solid #ccc;
+  box-shadow: 0px 0px 5px #ccc;
+}
+
+.gallery img {
+  transition: all .5s ease-in-out;
+}
+
+.gallery img:hover {
+  transform: scale(1.17);
+}
+
+.rsvp {
+  background-color: var(--bg);
+}
+
+.rsvp h2 {
+  font-size: 4.5rem;
+}
+
+.rsvp p,
+.rsvp form label {
+  color: white;
+}
+
+.rsvp button,
+.info a {
+  background-color: var(--pink);
+  color: white;
+  border: 1px solid #ff3098;
+}
+
+.rsvp button:hover,
+.info a:hover {
+  background-color: white;
+  color: var(--pink);
+  border: 1px solid #ff3098;
+}
+
+footer {
+  padding: 3rem;
+  background-color: var(--pink);
+  color: white;
+}
+
+footer a {
+  color: var(--bg);
+  font-weight: bold;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: white;
+}
+
+footer li {
+  list-style: none;
+  display: inline;
+  margin: 0.5rem;
+}
+
+.audio-icon-wrapper {
+  width: 4rem;
+  height: 4rem;
+  font-size: 4rem;
+  position: fixed;
+  bottom: 2.5rem;
+  right: 2rem;
+  cursor: pointer;
+  color: white;
+  opacity: 0.5;
+  mix-blend-mode: difference;
+  animation: rotating 4s linear infinite;
+  transform-origin: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 0;
+}
+
+@keyframes rotating {
+  from {
+    transform: 0;
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+
+}
 
 
 /* Media query */
@@ -334,7 +499,8 @@ body {
   }
 
   .simply-countdown .simply-section {
-    padding: 70px;
+    padding: 35px !important;
+    margin: 3px 3px !important;
   }
 
   .home .heart {
@@ -432,6 +598,10 @@ body {
     margin-bottom: 10px !important;
   }
 
+  .simply-countdown {
+    margin: 10px 0px !important;
+
+  }
 
 
   .mynavbar .nav-link {
