--- a/style.css
+++ b/style.css
@@ -1,167 +1,159 @@
 :root {
-  --pink: #ff0080;
-  --bg: #0a0a0a;
-  --shadow: 0 2px 2px rgb(0 0 0/0.5);
+	--pink: #ff0080;
+	--bg: #0a0a0a;
+	--shadow: 0 2px 2px rgb(0 0 0/0.5);
 }
 
 body {
-  font-size: 1.2rem;
-  font-family: "Work Sans", sans-serif;
-  /* Agar bisa discroll */
+	font-size: 1.2rem;
+	font-family: "Work Sans", sans-serif;
+	/* Agar bisa discroll */
 }
 
 .hero::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url(img/bg-hero.jpg);
-  background-size: 100%;
-  background-position: center;
-  z-index: -1;
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-image: url(img/bg-hero.jpg);
+	background-size: 100%;
+	background-position: center;
+	z-index: -1;
 }
 
 .hero {
-  position: relative;
-  min-height: 100vh;
-  /* Agar discroll berubah warna*/
+	position: relative;
+	min-height: 100vh;
+	/* Agar discroll berubah warna*/
 }
 
 .hero h1,
 .hero h4,
 .hero p {
-  text-shadow: var(--shadow);
+	text-shadow: var(--shadow);
 }
 
 .hero h1 {
-  font-family: "Sacramento", cursive;
-  font-size: 6rem;
+	font-family: "Sacramento", cursive;
+	font-size: 6rem;
 }
 
 .hero h4 {
-  font-size: 1.4rem;
+	font-size: 1.4rem;
 }
 
 .hero p {
-  font-size: 1.3rem;
+	font-size: 1.3rem;
 }
 
 .hero a {
-  box-shadow: var(--shadow);
-  color: var(--pink);
-  background-color: white;
-}
-
-.hero a:hover {
-  color: white;
-  background-color: var(--pink);
-}
-
-.lihatUndangan {
-  margin-top: 0px !important;
-  /* border-radius: 60px !important;
+	box-shadow: var(--shadow);
+	color: #f694d5;
+	background-color: white;
+	margin-top: 0px !important;
+	/* border-radius: 60px !important;
   border: none !important;*/
-  color: #eeeeee !important;
-  cursor: pointer !important;
-  display: inline-block !important;
-  -webkit-animation: glowing 1300ms infinite;
-  -moz-animation: glowing 1300ms infinite;
-  -o-animation: glowing 1300ms infinite;
-  animation: glowing 1300ms infinite
+	cursor: pointer !important;
+	display: inline-block !important;
+	-webkit-animation: glowing 1300ms infinite;
+	-moz-animation: glowing 1300ms infinite;
+	-o-animation: glowing 1300ms infinite;
+	animation: glowing 1300ms ease-in-out infinite;
 }
 
 @-webkit-keyframes glowing {
-  0% {
-    background-color: var(--pink);
-    -webkit-box-shadow: 0 0 var(--pink);
-  }
+	0% {
+		background-color: var(--pink);
+		-webkit-box-shadow: 0 0 5px var(--pink);
+	}
 
-  50% {
-    background-color: #ff0fbb;
-    /* Ubah ini jika Anda ingin warna yang berbeda di tengah-tengah animasi */
-    -webkit-box-shadow: 0 0 15px #ff7ed2;
-    /* Ubah ini jika Anda ingin bayangan yang berbeda di tengah-tengah animasi */
-  }
+	50% {
+		background-color: #ff1c8e;
+		/* Ubah ini jika Anda ingin warna yang berbeda di tengah-tengah animasi */
+		-webkit-box-shadow: 0 0 25px 1px #ff7ed2;
+		/* Ubah ini jika Anda ingin bayangan yang berbeda di tengah-tengah animasi */
+		color: #fed5f1;
+	}
 
-  100% {
-    background-color: var(--pink);
-    -webkit-box-shadow: 0 0 3px var(--pink);
-  }
+	100% {
+		background-color: var(--pink);
+		-webkit-box-shadow: 0 0 5px var(--pink);
+	}
 }
 
 @keyframes glowing {
-  0% {
-    background-color: var(--pink);
-    box-shadow: 0 0 3px var(--pink);
-  }
+	0% {
+		background-color: var(--pink);
+		box-shadow: 0 0 5px var(--pink);
+	}
 
-  50% {
-    background-color: #ff0080;
-    /* Ubah ini jika Anda ingin warna yang berbeda di tengah-tengah animasi */
-    box-shadow: 0 0 15px #ff3098;
-    /* Ubah ini jika Anda ingin bayangan yang berbeda di tengah-tengah animasi */
-  }
+	50% {
+		background-color: #ff1c8e;
+		/* Ubah ini jika Anda ingin warna yang berbeda di tengah-tengah animasi */
+		box-shadow: 0 0 25px 1px #ff3098;
+		/* Ubah ini jika Anda ingin bayangan yang berbeda di tengah-tengah animasi */
+		color: #fed5f1;
+	}
 
-  100% {
-    background-color: var(--pink);
-    box-shadow: 0 0 3px var(--pink);
-  }
+	100% {
+		background-color: var(--pink);
+		box-shadow: 0 0 5px var(--pink);
+	}
 }
 
-
 .mynavbar {
-  background-color: rgba(255, 255, 255, 0.8) !important;
-  backdrop-filter: blur(4px);
+	background-color: rgba(255, 255, 255, 0.8) !important;
+	backdrop-filter: blur(4px);
 }
 
 .mynavbar .offcanvas {
-  height: 100vh;
-  background-color: rgba(255, 255, 255, 0.8) !important;
+	height: 100vh !important;
+	width: 100vh !important;
+	background-color: rgba(255, 255, 255, 0.8) !important;
 }
 
 .mynavbar .navbar-brand {
-  font-family: "Sacramento", cursive;
-  font-size: 3.2rem;
-  font-weight: bold;
+	font-family: "Sacramento", cursive;
+	font-size: 3.2rem;
+	font-weight: bold;
 }
 
 .mynavbar .offcanvas-title {
-  font-family: "Sacramento", cursive;
-  font-size: 2.8rem;
-  font-weight: bold;
-  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+	font-family: "Sacramento", cursive;
+	font-size: 2.8rem;
+	font-weight: bold;
+	text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
 .mynavbar .nav-link {
-  text-transform: uppercase;
-  font-size: 1.5rem;
+	text-transform: uppercase;
+	font-size: 1.5rem;
 }
 
 .mynavbar .nav-link:hover {
-  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  color: black;
+	text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+	color: black;
 }
 
 .home {
-  background-image: url(img/bg-home.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  margin-top: -6rem;
-  padding-top: 8rem;
-  padding-bottom: 4rem;
+	background-image: url(img/bg-home.png);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	margin-top: -6rem;
+	padding-top: 8rem;
+	padding-bottom: 4rem;
 }
 
 .info {
-  background-image: url(img/bg-home.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding-top: 10rem;
-  padding-bottom: 8rem;
-
+	background-image: url(img/bg-home.png);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	padding-top: 10rem;
+	padding-bottom: 8rem;
 }
 
 .home h2,
@@ -170,465 +162,470 @@ body {
 .gallery h2,
 .rsvp h2,
 .gifts h2 {
-  color: var(--pink);
-  font-family: "Sacramento", cursive;
-  font-size: 5rem;
-  font-weight: bold;
+	color: var(--pink);
+	font-family: "Sacramento", cursive;
+	font-size: 5rem;
+	font-weight: bold;
 }
 
 .home h3 {
-  color: #444;
-  font-size: 1.5 rem;
+	color: #444;
+	font-size: 1.5 rem;
 }
 
 .home p {
-  font-size: 1.2rem;
-  color: #666;
+	font-size: 1.2rem;
+	color: #666;
 }
 
 .home .couple {
-  margin-top: 25px;
+	margin-top: 25px;
 }
 
 .home .couple h3 {
-  font-family: "Sacramento", cursive;
-  font-size: 2.4rem;
-  color: var(--pink);
+	font-family: "Sacramento", cursive;
+	font-size: 2.4rem;
+	color: var(--pink);
 }
 
 .home .couple img {
-  width: 100%;
+	width: 100%;
 }
 
 .home .heart {
-  width: 50px;
-  height: 50px;
-  background-color: white;
-  display: flex;
-  border-radius: 50%;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  /* Cara mengatur agar love berada diposisi tengah */
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%) translateY(65px);
+	width: 50px;
+	height: 50px;
+	background-color: white;
+	display: flex;
+	border-radius: 50%;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+	/* Cara mengatur agar love berada diposisi tengah */
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%) translateY(65px);
 }
 
 .home .heart i {
-  margin: auto;
-  color: var(--pink);
+	margin: auto;
+	color: var(--pink);
 }
 
 .story {
-  background-image: url(img/bg-story.jpg);
-  background-size: cover;
-  padding-top: 8rem;
-  padding-bottom: 4rem;
+	padding-top: 8rem;
+	padding-bottom: 4rem;
+	position: relative;
+}
+
+.story::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-image: url(img/bg-story.jpg);
+	background-size: cover;
+	filter: blur(2px) !important;
+	/* Efek blur pada latar belakang */
+	opacity: 0.7 !important;
+	/* Atur tingkat transparansi sesuai keinginan */
+	z-index: -1 !important;
+	/* Pastikan pseudo-element berada di bawah konten utama */
 }
 
 .info .alamat {
-  font-size: 1.1rem;
+	font-size: 1.1rem;
 }
 
 .info .description {
-  font-size: 1rem;
-  font-weight: 300;
+	font-size: 1rem;
+	font-weight: 300;
 }
 
 .info .card {
-  background-color: rgba(255, 255, 255, 0.2) !important;
-  color: black !important;
-  border: 1px solid #999;
+	background-color: rgba(255, 255, 255, 0.2) !important;
+	color: black !important;
+	border: 1px solid #999;
 }
 
 .info .card-header {
-  border: 1px solid #999;
-  text-transform: uppercase;
-  letter-spacing: 0.1rem;
+	border: 1px solid #999;
+	text-transform: uppercase;
+	letter-spacing: 0.1rem;
 }
 
 .info .card-body {
-  font-size: 1rem;
+	font-size: 1rem;
 }
 
 .info .card-footer {
-  border-top: 1px solid #999;
-  font-size: 0.9rem;
-  font-weight: 300;
+	border-top: 1px solid #999;
+	font-size: 0.9rem;
+	font-weight: 300;
 }
 
 .gallery,
 .rsvp,
 .gifts {
-  padding-top: 10rem;
-  padding-bottom: 8rem;
+	padding-top: 10rem;
+	padding-bottom: 8rem;
 }
 
 .story span,
 .gallery span,
 .gifts span {
-  text-transform: uppercase;
-  color: #666;
-  font-size: 0.9rem;
-  letter-spacing: 1px;
-  display: block;
-  /* Agar font berubah */
-  margin-bottom: 1rem;
+	text-transform: uppercase;
+	color: #666;
+	font-size: 0.9rem;
+	letter-spacing: 1px;
+	display: block;
+	/* Agar font berubah */
+	margin-bottom: 1rem;
 }
 
 .story p,
 .gallery p,
 .rsvp p,
 .gifts p {
-  font-size: 1rem;
-  font-weight: 300;
+	font-size: 1rem;
+	font-weight: 300;
 }
 
 .timeline {
-  list-style: none;
-  padding: 1.4rem 0;
-  margin-top: 1rem;
-  position: relative;
+	list-style: none;
+	padding: 1.4rem 0;
+	margin-top: 1rem;
+	position: relative;
 }
 
 .timeline::before {
-  content: '';
-  top: 0;
-  bottom: 0;
-  position: absolute;
-  width: 1px;
-  background-color: #ccc;
-  left: 50%;
+	content: "";
+	top: 0;
+	bottom: 0;
+	position: absolute;
+	width: 1px;
+	background-color: #ccc;
+	left: 50%;
 }
 
 .timeline li {
-  margin-bottom: 1.5rem;
-  position: relative;
+	margin-bottom: 1.5rem;
+	position: relative;
 }
 
 .timeline li::before,
 .timeline li::after {
-  content: '';
-  display: table;
+	content: "";
+	display: table;
 }
 
 .timeline li::after {
-  clear: both;
+	clear: both;
 }
 
 .timeline li .timeline-image {
-  width: 160px;
-  height: 160px;
-  background-color: #ccc;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 50%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+	width: 160px;
+	height: 160px;
+	background-color: #ccc;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	border-radius: 50%;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .timeline li .timeline-panel {
-  width: 40%;
-  float: left;
-  border: 1px solid #ccc;
-  padding: 2rem;
-  position: relative;
-  border-radius: 8px;
-  background-color: #fff;
+	width: 40%;
+	float: left;
+	border: 1px solid #ccc;
+	padding: 2rem;
+	position: relative;
+	border-radius: 8px;
+	background-color: #fff;
 }
 
 .timeline li .timeline-panel::before {
-  content: '';
-  display: inline-block;
-  position: absolute;
-  border-top: 15px solid transparent;
-  border-left: 15px solid #ccc;
-  border-right: 0 solid #ccc;
-  border-bottom: 15px solid transparent;
-  top: 80px;
-  right: -15px;
+	content: "";
+	display: inline-block;
+	position: absolute;
+	border-top: 15px solid transparent;
+	border-left: 15px solid #ccc;
+	border-right: 0 solid #ccc;
+	border-bottom: 15px solid transparent;
+	top: 80px;
+	right: -15px;
 }
 
 .timeline li .timeline-panel::after {
-  content: '';
-  display: inline-block;
-  position: absolute;
-  border-top: 14px solid transparent;
-  border-left: 14px solid #fff;
-  border-right: 0PX solid #fff;
-  border-bottom: 14px solid transparent;
-  top: 81px;
-  right: -13px;
+	content: "";
+	display: inline-block;
+	position: absolute;
+	border-top: 14px solid transparent;
+	border-left: 14px solid #fff;
+	border-right: 0px solid #fff;
+	border-bottom: 14px solid transparent;
+	top: 81px;
+	right: -13px;
 }
 
 .timeline li.timeline-inverted .timeline-panel {
-  float: right;
+	float: right;
 }
 
 .timeline li.timeline-inverted .timeline-panel::before {
-  border-left-width: 0;
-  border-right-width: 15px;
-  left: -15px;
-  right: auto;
+	border-left-width: 0;
+	border-right-width: 15px;
+	left: -15px;
+	right: auto;
 }
 
 .timeline li.timeline-inverted .timeline-panel::after {
-  border-left-width: 0;
-  border-right-width: 14px;
-  left: -13px;
-  right: auto;
+	border-left-width: 0;
+	border-right-width: 14px;
+	left: -13px;
+	right: auto;
 }
 
 .gallery {
-  background-color: #f5f5f5;
+	background-color: whitesmoke;
 }
 
 .gallery a {
-  width: 400px;
-  height: 300px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  overflow: hidden;
-  border: 1px solid #ccc;
-  box-shadow: 0px 0px 5px #ccc;
+	width: 400px;
+	height: 300px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	overflow: hidden;
+	border: 1px solid #ccc;
+	box-shadow: 0px 0px 5px #ccc;
 }
 
 .gallery img {
-  transition: all .5s ease-in-out;
+	transition: all 0.5s ease-in-out;
 }
 
 .gallery img:hover {
-  transform: scale(1.17);
+	transform: scale(1.17);
 }
 
 .rsvp {
-  background-color: var(--bg);
+	background-color: #222;
 }
 
 .rsvp h2 {
-  font-size: 4.5rem;
+	font-size: 4.5rem;
 }
 
 .rsvp p,
 .rsvp form label {
-  color: white;
+	color: white;
 }
 
 .rsvp button,
 .info a {
-  background-color: var(--pink);
-  color: white;
-  border: 1px solid #ff3098;
+	background-color: var(--pink);
+	color: white;
+	border: 1px solid #ff3098;
 }
 
 .rsvp button:hover,
 .info a:hover {
-  background-color: white;
-  color: var(--pink);
-  border: 1px solid #ff3098;
+	background-color: white;
+	color: var(--pink);
+	border: 1px solid #ff3098;
 }
 
 footer {
-  padding: 3rem;
-  background-color: var(--pink);
-  color: white;
+	padding: 3rem;
+	background-color: var(--pink);
+	color: white;
 }
 
 footer a {
-  color: var(--bg);
-  font-weight: bold;
-  text-decoration: none;
+	color: var(--bg);
+	font-weight: bold;
+	text-decoration: none;
 }
 
 footer a:hover {
-  color: white;
+	color: white;
 }
 
 footer li {
-  list-style: none;
-  display: inline;
-  margin: 0.5rem;
+	list-style: none;
+	display: inline;
+	margin: 0.5rem;
 }
 
 .audio-icon-wrapper {
-  width: 4rem;
-  height: 4rem;
-  font-size: 4rem;
-  position: fixed;
-  bottom: 2.5rem;
-  right: 2rem;
-  cursor: pointer;
-  color: white;
-  opacity: 0.5;
-  mix-blend-mode: difference;
-  animation: rotating 4s linear infinite;
-  transform-origin: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  line-height: 0;
+	width: 4rem;
+	height: 4rem;
+	font-size: 4rem;
+	position: fixed;
+	bottom: 2.5rem;
+	right: 2rem;
+	cursor: pointer;
+	color: var(--pink);
+	opacity: 0.5;
+	animation: rotating 4s linear infinite;
+	transform-origin: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	line-height: 0;
 }
 
 @keyframes rotating {
-  from {
-    transform: 0;
-  }
+	from {
+		transform: 0;
+	}
 
-  to {
-    transform: rotate(360deg);
-  }
-
+	to {
+		transform: rotate(360deg);
+	}
 }
-
 
 /* Media query */
 /* Extra Large */
 @media (max-width: 1200px) {
-  .home .heart {
-    transform: translateX(-50%) translateY(45px);
-  }
+	.home .heart {
+		transform: translateX(-50%) translateY(45px);
+	}
 }
 
 /* Laptop */
 /* Setengah lebih sedikit */
 @media (max-width: 992px) {
-  html {
-    font-size: 75%;
-  }
+	html {
+		font-size: 75%;
+	}
 
-  .simply-countdown .simply-section {
-    padding: 35px !important;
-    margin: 3px 3px !important;
-  }
+	.simply-countdown .simply-section {
+		padding: 35px !important;
+		margin: 3px 3px !important;
+	}
 
-  .home .heart {
-    display: none;
-  }
+	.home .heart {
+		display: none;
+	}
 
-  .timeline::before {
-    left: 60px;
-  }
+	.timeline::before {
+		left: 60px;
+	}
 
-  .timeline li .timeline-image {
-    left: 15px;
-    margin-left: 45px;
-    top: 16px;
-  }
+	.timeline li .timeline-image {
+		left: 15px;
+		margin-left: 45px;
+		top: 16px;
+	}
 
-  .timeline li .timeline-panel {
-    width: calc(100% - 200px);
-    float: right;
-  }
+	.timeline li .timeline-panel {
+		width: calc(100% - 200px);
+		float: right;
+	}
 
-  .timeline li .timeline-panel::before {
-    border-left-width: 0;
-    border-right-width: 15px;
-    left: -15px;
-    right: auto;
-  }
+	.timeline li .timeline-panel::before {
+		border-left-width: 0;
+		border-right-width: 15px;
+		left: -15px;
+		right: auto;
+	}
 
-  .timeline li .timeline-panel::after {
-    border-left-width: 0;
-    border-right-width: 14px;
-    left: -13px;
-    right: auto;
-  }
-
-
-
+	.timeline li .timeline-panel::after {
+		border-left-width: 0;
+		border-right-width: 14px;
+		left: -13px;
+		right: auto;
+	}
 }
 
 /* Tablet */
 @media (max-width: 768px) {
-  html {
-    font-size: 65%;
-  }
+	html {
+		font-size: 65%;
+	}
 
-  .simply-countdown .simply-section {
-    padding: 45px;
-    margin: 5px;
-    margin-bottom: 15px;
-  }
+	.simply-countdown .simply-section {
+		padding: 45px;
+		margin: 5px;
+		margin-bottom: 15px;
+	}
 
-  .mynavbar .nav-link {
-    font-size: 2rem;
-    text-align: center;
-  }
+	.mynavbar .nav-link {
+		font-size: 2rem;
+		text-align: center;
+	}
 
-  .timeline li .timeline-image {
-    width: 140px;
-    height: 140px;
-  }
+	.timeline li .timeline-image {
+		width: 140px;
+		height: 140px;
+	}
 
-  .sticky-top {
-    overflow: hidden;
-  }
+	.sticky-top {
+		overflow: hidden;
+	}
 
-  .timeline li .timeline-panel::before {
-    border-left-width: 0;
-    border-right-width: 15px;
-    left: -15px;
-    right: auto;
-    top: 31px;
-  }
+	.timeline li .timeline-panel::before {
+		border-left-width: 0;
+		border-right-width: 15px;
+		left: -15px;
+		right: auto;
+		top: 31px;
+	}
 
-  .timeline li .timeline-panel::after {
-    border-left-width: 0;
-    border-right-width: 14px;
-    left: -13px;
-    right: auto;
-    top: 32px;
-  }
-
-
+	.timeline li .timeline-panel::after {
+		border-left-width: 0;
+		border-right-width: 14px;
+		left: -13px;
+		right: auto;
+		top: 32px;
+	}
 }
 
 /* Phone Mobile */
 @media (max-width: 576px) {
-  html {
-    font-size: 60% !important;
-  }
+	html {
+		font-size: 60% !important;
+	}
 
-  .simply-countdown .simply-section {
-    padding: 35px !important;
-    margin-bottom: 15px !important;
-    margin: 0 5px !important;
-    margin-bottom: 10px !important;
-  }
+	.simply-countdown .simply-section {
+		padding: 35px !important;
+		margin-bottom: 15px !important;
+		margin: 0 5px !important;
+		margin-bottom: 10px !important;
+	}
 
-  .simply-countdown {
-    margin: 10px 0px !important;
+	.simply-countdown {
+		margin: 10px 0px !important;
+	}
 
-  }
+	.mynavbar .nav-link {
+		font-size: 1.7rem !important;
+		text-align: center !important;
+	}
 
+	.timeline li .timeline-image {
+		width: 80px;
+		height: 80px;
+	}
 
-  .mynavbar .nav-link {
-    font-size: 1.7rem !important;
-    text-align: center !important;
-  }
+	.timeline li .timeline-panel {
+		width: 60%;
+		transform: translateX(-20px);
+	}
 
-  .timeline li .timeline-image {
-    width: 80px;
-    height: 80px;
-  }
+	.timeline li .timeline-panel::before {
+		top: 30px;
+	}
 
-  .timeline li .timeline-panel {
-    width: 60%;
-    transform: translateX(-20px);
-  }
+	.timeline li .timeline-panel::before {
+		top: 31px;
+	}
 
-  .timeline li .timeline-panel::before {
-    top: 30px;
-  }
-
-  .timeline li .timeline-panel::before {
-    top: 31px;
-
-  }
-
-  .sticky-top {
-    overflow: hidden;
-  }
+	.sticky-top {
+		overflow: hidden;
+	}
 }
